Fix the text wrapping on smaller screens

--- a/demo/sass/screen.scss
+++ b/demo/sass/screen.scss
@@ -377,7 +377,7 @@ a.logo {
 
   span {
     display: inline-block;
-    width: 96px;
+    width: 104px;
 
     &:first-child {
       text-align: right;
